--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tadashi/jsonb",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "Compress or decompress any data",
   "main": "index.js",
   "files": [
@@ -16,12 +16,13 @@
   "keywords": [
     "json",
     "brotli",
+    "buffer",
     "base64"
   ],
   "author": "Thiago Lagden",
   "license": "MIT",
   "engines": {
-    "node": ">=10.16.0"
+    "node": ">=12"
   },
   "dependencies": {
     "devalue": "2.0.1"
@@ -30,6 +31,7 @@
     "ava": "3.15.0",
     "eslint": "7.17.0",
     "eslint-config-xo": "0.34.0",
-    "eslint-plugin-unicorn": "25.0.1"
+    "eslint-plugin-unicorn": "25.0.1",
+    "nyc": "15.1.0"
   }
 }
