--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@tadashi/jsonb",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "Compress or decompress any data",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/jsonb.js",
   "files": [
+    "src",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
-    "report": "nyc report --reporter=text-lcov | coveralls",
-    "eslint": "eslint --ignore-path .gitignore .",
+    "eslint": "eslint --config .eslintrc.yml --ext .js --ignore-path .gitignore .",
     "pretest": "npm run eslint",
-    "test": "ava --tap"
+    "test": "c8 --reporter=text --reporter=text-summary --reporter=lcov ava --tap"
   },
   "keywords": [
     "json",
@@ -22,16 +23,24 @@
   "author": "Thiago Lagden",
   "license": "MIT",
   "engines": {
-    "node": ">=12"
+    "node": ">=14.16"
   },
   "dependencies": {
     "devalue": "2.0.1"
   },
   "devDependencies": {
+    "@babel/core": "7.15.0",
+    "@babel/eslint-parser": "7.15.0",
     "ava": "3.15.0",
-    "eslint": "7.23.0",
-    "eslint-config-xo": "0.35.0",
-    "eslint-plugin-unicorn": "29.0.0",
-    "nyc": "15.1.0"
+    "c8": "7.8.0",
+    "eslint": "7.32.0",
+    "eslint-config-xo": "0.38.0",
+    "eslint-plugin-unicorn": "35.0.0"
+  },
+  "babel": {},
+  "ava": {
+    "nodeArguments": [
+      "--trace-warnings"
+    ]
   }
 }
