--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,10 @@
 root: true
 env:
-  es2021: true
+  es2022: true
   node: true
-parser: '@babel/eslint-parser'
+# parser: '@babel/eslint-parser'
 parserOptions:
-  ecmaVersion: 12
+  ecmaVersion: 13
   sourceType: module
 extends:
   - xo
@@ -21,7 +21,6 @@ rules:
       after: true
   no-console: off
   no-debugger: off
-  no-new-func: off
   no-unused-expressions:
     - error
     -
